Fjerner redundant system property som fikk tester til å feile